syntax = "proto3";

package greet;
option go_package="greet/greetpb";


message Greeting {
    string first_name = 1;
    string last_name = 2;
}

message GreetRequest {
    Greeting greeting = 1;
}

message GreetResponse {
    string result = 1;
}

message GreetManyTimesRequest {
    Greeting greeting = 1;
}

message GreetManyTimesResponse {
    string result = 1;
}

message ManyGreetRequest {
    Greeting greeting = 1;
}

message ManyGreetResponse {
    string result = 1;
}

message Chunk {
    bytes content = 1;
}

message UploadStatus {
    string result = 1;
    UploadStatusCode code = 2;
}

enum UploadStatusCode {
    Ok = 0;
    Failed = 1;
}

service GreetService{
    // Unary
    rpc Greet(GreetRequest) returns (GreetResponse) {};

    // Server Streaming
    rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {};

    // Client streaming
    rpc ManyGreet(stream ManyGreetRequest) returns (ManyGreetResponse) {};

    // uploading file by using client streaming
    rpc Upload(stream Chunk) returns (UploadStatus) {};
}
